--- a/src/app/agent-settinga/agent-settinga.component.html
+++ b/src/app/agent-settinga/agent-settinga.component.html
@@ -13,9 +13,9 @@
                         <input type="hidden" value="" id="enablereport" (click)="enablereport()">
                         <input type="hidden" value="" id="updatereport" (click)="updatereport()">
                     </div>
-                    <a (click)="showdoc('https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_agents.pdf')"  target="_blank"><i style="font-size: 24px;
+                    <a (click)="showdoc('https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_agents.pdf')"  target="_blank"><i style="font-size: 24px;
                         float: right;" class="fa fa-exclamation-circle"></i></a>
-					<!-- <a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_agents.pdf" target="_blank"><i style="font-size:24px;" class="fa fa-exclamation-circle"></i></a> -->
+					<!-- <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_agents.pdf" target="_blank"><i style="font-size:24px;" class="fa fa-exclamation-circle"></i></a> -->
 
                 </div>
                 <div class="card-body p-0">
