--- a/src/app/app-settings/app-settings.component.html
+++ b/src/app/app-settings/app-settings.component.html
@@ -168,14 +168,14 @@
 							 <p>Please, Click here to get detailed documentation for live integration</p>
 
 							 <div class="download-btn-panel">
-								<a href="https://baobabgroup.mconnectapps.com/api/v1.0/Facebook_doc.pdf" target="_blank" class="btn btn-info" download><i class="fas fa-eye"></i> Download</a>
+								<a href="https://baobabbfaso.mconnectapps.com/api/v1.0/Facebook_doc.pdf" target="_blank" class="btn btn-info" download><i class="fas fa-eye"></i> Download</a>
 							</div>
 						  </div>
                           <div *ngIf="!this.has_fb_page ">
 									<p>Sorry,we does not integrated your Facebook page for LIVE </p>
 									<p>Please, Click here to get detailed documentation for live integration</p>
 									<div class="download-btn-panel">
-										<a href="https://baobabgroup.mconnectapps.com/api/v1.0/Facebook_doc.pdf" target="_blank" class="btn btn-info" download><i class="fas fa-eye"></i> Download</a>
+										<a href="https://baobabbfaso.mconnectapps.com/api/v1.0/Facebook_doc.pdf" target="_blank" class="btn btn-info" download><i class="fas fa-eye"></i> Download</a>
 									</div>
 						</div>
 
@@ -222,7 +222,7 @@
 					<div class="widget-inner-content"  *ngIf="liveContentWP">
 						<h6>Click to get detailed document</h6>
 						<div class="download-btn-panel">
-							<a href="https://baobabgroup.mconnectapps.com/api/v1.0/whatsapp_doc.pdf" download class="btn btn-info" target="_blank"><i class="fas fa-eye"></i> Download</a>
+							<a href="https://baobabbfaso.mconnectapps.com/api/v1.0/whatsapp_doc.pdf" download class="btn btn-info" target="_blank"><i class="fas fa-eye"></i> Download</a>
 						</div>
 					</div>
 				</div>
@@ -246,7 +246,7 @@
 				<h6>Click to get detailed document</h6>
 
 				<div class="download-btn-panel">
-					<a href="https://baobabgroup.mconnectapps.com/api/v1.0/Help_manuals/others/Omni%20WhatsApp%20unoff.pdf" download class="btn btn-info" target="_blank"><i class="fas fa-eye"></i> View</a>
+					<a href="https://baobabbfaso.mconnectapps.com/api/v1.0/Help_manuals/others/Omni%20WhatsApp%20unoff.pdf" download class="btn btn-info" target="_blank"><i class="fas fa-eye"></i> View</a>
 				</div>
 			</div>
 
@@ -315,8 +315,8 @@
 							<div class="widget-inner-content" >
 								<h6>Click to get detailed document</h6>
 								<div class="download-btn-panel">
-							        <!-- <a href="https://baobabgroup.mconnectapps.com/api/v1.0/LINE_doc.pdf" download class="btn btn-info" target="_blank"><i class="fas fa-eye"></i> Download</a> -->
-							        <a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/line.pdf" download class="btn btn-info" target="_blank"><i class="fas fa-eye"></i> Download</a>
+							        <!-- <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/LINE_doc.pdf" download class="btn btn-info" target="_blank"><i class="fas fa-eye"></i> Download</a> -->
+							        <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/line.pdf" download class="btn btn-info" target="_blank"><i class="fas fa-eye"></i> Download</a>
 								</div>
 							</div>
 
@@ -482,7 +482,7 @@ function receiveMessage(e)&#123;var t=JSON.parse(e.data),i=t.status_style;"openC
 			<div class="code-to-copy">
 				<h4>Use the below api to post the data</h4>
 				<div class="widget-copy">
-					<a>https://baobabgroup.mconnectapps.com/api/v1.0/index.php</a>
+					<a>https://baobabbfaso.mconnectapps.com/api/v1.0/index.php</a>
 				</div>
 			</div>
 			<div class="code-to-copy">
