--- a/src/app/bulk-mail-list/bulk-mail-list.component.html
+++ b/src/app/bulk-mail-list/bulk-mail-list.component.html
@@ -8,7 +8,7 @@
                     <div class="addBtn">
                         <button type="button" class="btn btn-primary" routerLink="/email-bulk">+ Compose Bulk Email</button>
                     </div>
-					<!-- <a style="margin-left: 20px;" href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_wrapup.pdf" target="_blank"><i style="font-size:24px;" class="fa fa-exclamation-circle"></i></a> -->
+					<!-- <a style="margin-left: 20px;" href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_wrapup.pdf" target="_blank"><i style="font-size:24px;" class="fa fa-exclamation-circle"></i></a> -->
 
                 </div>
                 <div class="card-body p-0">
