--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -9,10 +9,10 @@
                         <button *ngIf="show_admin_sett" type="button" class="btn btn-primary" (click)="uploadCSV()">+ Upload CSV</button>
                         <button type="button" class="btn btn-primary" (click)="addContact()">+ Add Contact</button>
                     </div>
-                    <a (click)="showdoc('https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_contacts.pdf')"  target="_blank"><i style="font-size: 24px;
+                    <a (click)="showdoc('https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_contacts.pdf')"  target="_blank"><i style="font-size: 24px;
                         float: right;" class="fa fa-exclamation-circle"></i></a>
 
-					<!-- <a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_contacts.pdf" target="_blank"><i style="font-size:24px;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a> -->
+					<!-- <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_contacts.pdf" target="_blank"><i style="font-size:24px;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a> -->
 
                 </div>
                 <div class="card-body p-0">
