--- a/src/app/mc/internal-chat/internal-chat.component.html
+++ b/src/app/mc/internal-chat/internal-chat.component.html
@@ -63,7 +63,7 @@
                         <div class="card fullHeightCard keep-connect-chat-content" *ngIf="chat_panel_detail_type=='chat_screen'">
                          <a (click)="showdoc('https://youtu.be/0UEeHC9GeJ4')"  target="_blank"><i style="font-size: 24px;
                             float: right;" class="fa fa-exclamation-circle"></i></a>
-                          <!-- <a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_internal_chat.pdf"  target="_blank"><i style="font-size: 24px;padding-right: 20px;
+                          <!-- <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_internal_chat.pdf"  target="_blank"><i style="font-size: 24px;padding-right: 20px;
                             padding-top: 20px;float: right;" class="fa fa-exclamation-circle"></i></a> -->
                           <div class="card-body">
                                 <div class="keep-connect">
