--- a/src/app/mc/sms/sms.component.html
+++ b/src/app/mc/sms/sms.component.html
@@ -63,7 +63,7 @@
 
                           <a (click)="showdoc('https://youtu.be/kbf8NXA2e3Y')"  target="_blank"><i style="font-size: 24px;
                             float: right;" class="fa fa-exclamation-circle"></i></a>
-                          <!-- <a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_sms.pdf"  target="_blank"><i style="font-size: 24px;padding-right: 20px;
+                          <!-- <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_sms.pdf"  target="_blank"><i style="font-size: 24px;padding-right: 20px;
                             padding-top: 20px;float: right;" class="fa fa-exclamation-circle"></i></a> -->
                           <div class="card-body">
                                 <div class="keep-connect">
