--- a/src/app/whatsapp-chat/whatsapp-chat.component.html
+++ b/src/app/whatsapp-chat/whatsapp-chat.component.html
@@ -40,7 +40,7 @@
 </div>
 <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9" id="chat_details_view">
   <div class="card fullHeightCard keep-connect-chat-content" *ngIf="chat_panel_detail_type=='chat_screen'">
-    <a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_basic_whatsapp.pdf"  target="_blank"><i style="font-size: 24px;padding-right: 20px;
+    <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_basic_whatsapp.pdf"  target="_blank"><i style="font-size: 24px;padding-right: 20px;
       padding-top: 20px;float: right;" class="fa fa-exclamation-circle"></i></a>
     <div class="card-body">
       <div class="keep-connect">
