--- a/src/app/whatsapp-unoff/whatsapp-unoff.component.css
+++ b/src/app/whatsapp-unoff/whatsapp-unoff.component.css
@@ -27,7 +27,7 @@ i.agent_inactive.fa-circle.fas {
 
 }
 /* .background {
-  background-image: url(https://baobabgroup.mconnectapps.com/api/v1.0/whatsapp_image/9cb070d62dc738a0c3a1a408d68e4af5.jpg);
+  background-image: url(https://baobabbfaso.mconnectapps.com/api/v1.0/whatsapp_image/9cb070d62dc738a0c3a1a408d68e4af5.jpg);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
