--- a/src/app/agent-groups/agent-groups.component.html
+++ b/src/app/agent-groups/agent-groups.component.html
@@ -14,7 +14,7 @@
 
                     <a (click)="showdoc('https://youtu.be/kBNSupcq-7A')"  target="_blank"><i style="font-size: 24px;
                         float: right;" class="fa fa-exclamation-circle"></i></a>
-					<!-- <a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_sms_groups.pdf" target="_blank"><i style="font-size:24px;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a> -->
+					<!-- <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/pro_sms_groups.pdf" target="_blank"><i style="font-size:24px;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a> -->
 
                 </div>
                 <div class="card-body p-0">
