--- a/src/app/chatbot-question-feed/chatbot-question-feed.component.html
+++ b/src/app/chatbot-question-feed/chatbot-question-feed.component.html
@@ -8,9 +8,9 @@
                     <div class="addBtn">
                         <button type="button" class="btn btn-primary" (click)="addQuestion()">+ Add Question</button>
                     </div>
-                    <!-- <a (click)="showdoc('https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/chatbot.pdf')"  target="_blank"><i style="font-size: 24px;
+                    <!-- <a (click)="showdoc('https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/chatbot.pdf')"  target="_blank"><i style="font-size: 24px;
                         float: right;" class="fa fa-question-circle"></i></a> -->
-                    <!-- <a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/chatbot.pdf"  target="_blank"><i style="font-size: 24px;float: right;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a> -->
+                    <!-- <a href="https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/chatbot.pdf"  target="_blank"><i style="font-size: 24px;float: right;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a> -->
                 </div>
                 <div class="card-body p-0">
                     <div class="table-responsive">
