--- a/src/app/mc/mc.component.html
+++ b/src/app/mc/mc.component.html
@@ -72,7 +72,7 @@
                    <li class="has-tooltip">
                        <a href="{{this.chatbotUrl}}" id="mc_chat" target="_blank" *ngIf="this.has_chatbot == '1'"><img src="assets/img/mc-dashboard/chatbot.png"><span class="tooltip-modal">Chatbot</span></a>
                    </li>
-                   <a (click)="showdoc('https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/mc-Dashboard.pdf')"  target="_blank"><i style="font-size: 24px;
+                   <a (click)="showdoc('https://baobabbfaso.mconnectapps.com/api/v1.0/pro_contents/mc-Dashboard.pdf')"  target="_blank"><i style="font-size: 24px;
                     float: right;" class="fa fa-exclamation-circle"></i></a>
                         <!-- <a href="#" class="btn btn-primary">View More</a> -->
                         </ul>
